// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<a
  aria-disabled="false"
  class="za-button za-radio theme-default size-xs bordered"
  role="button"
>
  <span>
    <input
      class="za-radio-input"
      type="radio"
      value="0"
    />
    选项一
  </span>
</a>
`;

exports[`Radio type is cell 1`] = `
<Cell
  className={null}
  description={null}
  disabled={false}
  hasArrow={false}
  onClick={[Function]}
  prefixCls="za-cell"
>
  <input
    checked={false}
    className="za-radio-input"
    disabled={false}
    onChange={[Function]}
    type="radio"
    value="0"
  />
  选项一
</Cell>
`;

exports[`Radio.Group Radio checked 1`] = `
<div
  class="za-radio-group"
>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-radio-input"
        type="radio"
        value="0"
      />
      选项一
    </span>
  </a>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs"
    role="button"
  >
    <span>
      <input
        checked=""
        class="za-radio-input"
        type="radio"
        value="1"
      />
      选项二
    </span>
  </a>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-radio-input"
        type="radio"
        value="2"
      />
      选项三
    </span>
  </a>
</div>
`;

exports[`Radio.Group defaultValue 1`] = `
<div
  class="za-radio-group"
>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-radio-input"
        type="radio"
        value="0"
      />
      选项一
    </span>
  </a>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs"
    role="button"
  >
    <span>
      <input
        checked=""
        class="za-radio-input"
        type="radio"
        value="1"
      />
      选项二
    </span>
  </a>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-radio-input"
        type="radio"
        value="2"
      />
      选项三
    </span>
  </a>
</div>
`;

exports[`Radio.Group renders correctly 1`] = `
<div
  class="za-radio-group"
>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs"
    role="button"
  >
    <span>
      <input
        checked=""
        class="za-radio-input"
        type="radio"
        value="0"
      />
      选项一
    </span>
  </a>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-radio-input"
        type="radio"
        value="1"
      />
      选项二
    </span>
  </a>
  <a
    aria-disabled="false"
    class="za-button za-radio theme-primary size-xs bordered"
    role="button"
  >
    <span>
      <input
        class="za-radio-input"
        type="radio"
        value="2"
      />
      选项三
    </span>
  </a>
</div>
`;

exports[`Radio.Group type is cell 1`] = `
<div
  className="za-radio-group"
>
  <Radio
    block={false}
    checked={false}
    className={null}
    defaultChecked={false}
    disabled={false}
    onChange={[Function]}
    prefixCls="za-radio"
    theme="primary"
    type="cell"
    value="0"
  >
    选项一
  </Radio>
  <Radio
    block={false}
    checked={false}
    className={null}
    defaultChecked={false}
    disabled={false}
    onChange={[Function]}
    prefixCls="za-radio"
    theme="primary"
    type="cell"
    value="1"
  >
    选项二
  </Radio>
  <Radio
    block={false}
    checked={false}
    className={null}
    defaultChecked={false}
    disabled={true}
    onChange={[Function]}
    prefixCls="za-radio"
    theme="primary"
    type="cell"
    value="2"
  >
    选项三
  </Radio>
</div>
`;
